--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
 <head>
+  <title>Adventures in programming!</title>
 </head>
 <body>
+  <h1>[language]-adventures</h1>
+  <p>An exploration of programming languages</p>
+  <ul>
+    <li><a href="https://github.com/hansolo669/ocaml-adventures">ocaml-adventures</a></li>
+    <li><a href="https://github.com/hansolo669/racket-adventures">racket-adventures</a></li>
+    <li><a href="https://github.com/hansolo669/swift-adventures">swift-adventures</a></li>
+    <li><a href="https://github.com/hansolo669/pascal-adventures">pascal-adventures</a></li>
+  </ul>
 </body>
 </html>
