--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <html>
 <head>
-  <title>Adventures in programming!</title>
+    <title>Adventures in programming!</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  <h1>[language]-adventures</h1>
-  <p>An exploration of programming languages</p>
-  <ul>
-    <li><a href="https://github.com/hansolo669/ocaml-adventures">ocaml-adventures</a></li>
-    <li><a href="https://github.com/hansolo669/racket-adventures">racket-adventures</a></li>
-    <li><a href="https://github.com/hansolo669/swift-adventures">swift-adventures</a></li>
-    <li><a href="https://github.com/hansolo669/pascal-adventures">pascal-adventures</a></li>
-  </ul>
+    <h1>[language]-adventures</h1>
+    <p>An exploration of programming languages</p>
+    <ul>
+        <li><a href="https://github.com/hansolo669/ocaml-adventures">ocaml-adventures</a></li>
+        <li><a href="https://github.com/hansolo669/racket-adventures">racket-adventures</a></li>
+        <li><a href="https://github.com/hansolo669/swift-adventures">swift-adventures</a></li>
+        <li><a href="https://github.com/hansolo669/pascal-adventures">pascal-adventures</a></li>
+    </ul>
 </body>
 </html>
