--- a/index.html
+++ b/index.html
@@ -22,71 +22,64 @@
         <div id="ocaml">
             <h2>ocaml</h2>
             <p>(* TODO: thoughts *)</p>
-            <pre><code>
-            Printf.printf "Hello, World!";;
-            </code></pre>
+<pre><code>Printf.printf "Hello, World!";;
+</code></pre>
         </div>
         <div id="racket">
             <h2>racket</h2>
             <p>It's a really clean lisp with awesome documentation. Dr Racket complements the language nicely and provides a good environment to play around with code.</p>
-            <pre><code>
-            (display "Hello, World!")
-            </code></pre>
+<pre><code>(display "Hello, World!")
+</code></pre>
         </div>
         <div id="swift">
             <h2>swift/Obj-C</h2>
             <p>I group these two together not because of their similarities, but because they are complementary and integral parts of Apples ecosystem.</p>
             <p>swift</p>
-            <pre><code>
-            println("Hello, World")
-            </code></pre>
+<pre><code>println("Hello, World")
+</code></pre>
             <p>and Obj-C</p>
-            <pre><code>
-            #import <Foundation/Foundation.h>
+<pre><code>#import <Foundation/Foundation.h>
 
-            int main() {
-                @autoreleasepool {
-                    NSLog(@"Hello, World");
-                }
-                return 0;
-            }
-            </code></pre>
+int main() {
+    @autoreleasepool {
+        NSLog(@"Hello, World");
+    }
+    return 0;
+}
+</code></pre>
         </div>
         <div id="pascal">
             <h2>pascal</h2>
             <p>It's pretty nifty.</p>
-            <pre><code class="delphi">
-            program Demo;
-            begin
-                WriteLn('Hello, World!');
-            end.
-            </code></pre>
+<pre><code>program Demo;
+begin
+    WriteLn('Hello, World!');
+end.
+</code></pre>
         </div>
         <div id="cpp">
             <h2>C++</h2>
             <p>What happens when you add support for almost every programming paradigm to C? C++ happens.</p>
-            <pre><code>
-            #include <iostream>
+<pre><code>#include <iostream>
 
-            using namespace std;
+using namespace std;
 
-            int main() {
-                cout << "Hello, World!" << endl;
-                return 0;
-            }
-            </code></pre>
+int main() {
+    cout << "Hello, World!" << endl;
+    return 0;
+}
+</code></pre>
         </div>
         <div id="c">
             <h2>C</h2>
             <p>Possibly the first "viral" langauge, and still the language of choice for kernel hackers, I would be remiss if I didn't at least mention C.</p>
-            <pre><code>
-            #include <stdio.h>
+<pre><code>#include <stdio.h>
 
-            int main() {
-                printf("Hello, World!");
-                return 0;
-            }
-            </code></pre>
+int main() {
+    printf("Hello, World!");
+    return 0;
+}
+</code></pre>
         </div>
     </div>
 </body>
