tidyed things up a bit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>[language]-adventures</h1>
-    <p>An exploration of programming languages</p>
+    <p>Exploring programming languages</p>
+    <p>Specifically languages I havn't had a chance to use a lot, So don't expect JS, Python, Ruby, etc.</p>
     <ul>
         <li><a href="https://github.com/hansolo669/ocaml-adventures">ocaml-adventures</a> | <a href="#ocaml">thoughts</a></li>
         <li><a href="https://github.com/hansolo669/racket-adventures">racket-adventures</a> | <a href="#racket">thoughts</a></li>
@@ -27,7 +28,7 @@
         </div>
         <div id="racket">
             <h2>racket</h2>
-            <p>It's a really clean lisp with awesome documentation. Dr Racket complements the language nicely and provides a good environment to play around with code.</p>
+            <p>Racket is a really clean lisp with awesome documentation. Dr Racket is a great environment to play around with code.</p>
 <pre><code>(display "Hello, World!")
 </code></pre>
         </div>
