--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>[language]-adventures</h1>
     <p>Exploring programming languages</p>
-    <p>Specifically languages I havn't had a chance to use a lot, So don't expect JS, Python, Ruby, etc.</p>
+    <p>Specifically languages I havn't had a chance to use a lot, so not JS, Python, Ruby, etc.</p>
     <ul>
         <li><a href="https://github.com/hansolo669/ocaml-adventures">ocaml-adventures</a> | <a href="#ocaml">thoughts</a></li>
         <li><a href="https://github.com/hansolo669/racket-adventures">racket-adventures</a> | <a href="#racket">thoughts</a></li>
