--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <pre><code>println("Hello, World")
 </code></pre>
             <p>and Obj-C</p>
-<pre><code>#import <Foundation/Foundation.h>
+<pre><code>#import &lt;Foundation/Foundation.h&gt;
 
 int main() {
     @autoreleasepool {
@@ -61,7 +61,7 @@ end.
         <div id="cpp">
             <h2>C++</h2>
             <p>What happens when you add support for almost every programming paradigm to C? C++ happens.</p>
-<pre><code>#include <iostream>
+<pre><code>#include &lt;iostream&gt;
 
 using namespace std;
 
@@ -74,7 +74,7 @@ int main() {
         <div id="c">
             <h2>C</h2>
             <p>Possibly the first "viral" langauge, and still the language of choice for kernel hackers, I would be remiss if I didn't at least mention C.</p>
-<pre><code>#include <stdio.h>
+<pre><code>#include &lt;stdio.h&gt;
 
 int main() {
     printf("Hello, World!");
