HOLY COW META TAGS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <link rel="stylesheet" href="solarized_dark.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@hansolo669">
+    <meta name="twitter:description" content="Exploring programming languages">
+    <meta name="twitter:title" content="[language]-adventures">
+    <meta name="twitter:url" content="http://www.reallyawesomedomain.com/adventures/">
+    <meta name="twitter:domain" content="reallyawesomedomain.com">
+    <meta name="twitter:creator" content="@hansolo669">
+    <meta name="description" content="Exploring programming languages">
+    <meta property="og:title" content="[language]-adventures">
+    <meta property="og:url" content="http://www.reallyawesomedomain.com/adventures/">
+    <meta property="og:site_name" content="[language]-adventures">
+    <meta property="og:type" content="magic">
 </head>
 <body>
     <h1>[language]-adventures</h1>
