--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="solarized_dark.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-49178030-2', 'auto');
+    ga('send', 'pageview');
+    </script>
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@hansolo669">
     <meta name="twitter:description" content="Exploring programming languages">
