--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
     <title>Adventures in programming!</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" href="solarized_dark.css">
+    <link rel="icon" type="image/ico" href="/favicon.ico">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script>
