--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" href="solarized_dark.css">
-    <link rel="icon" type="image/ico" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script>
