properly escaped some <<

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ end.
 using namespace std;
 
 int main() {
-    cout << "Hello, World!" << endl;
+    cout &lt;&lt; "Hello, World!" &lt;&lt; endl;
     return 0;
 }
 </code></pre>
