added fortran cause I'm crazy

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="https://github.com/hansolo669/pascal-adventures">pascal-adventures</a> | <a href="#pascal">thoughts</a></li>
         <li><a href="https://github.com/hansolo669/cpp-adventures">cpp-adventures</a> | <a href="#cpp">thoughts</a></li>
         <li><a href="https://github.com/hansolo669/c-adventures">c-adventures</a> | <a href="#c">thoughts</a></li>
+        <li><a href="https://github.com/hansolo669/fortran-adventures">fortran-adventures</a> | <a href="#fortran">thoughts</a></li>
     </ul>
     <div class="thoughts">
         <div id="ocaml">
@@ -108,6 +109,17 @@ int main() {
 }
 </code></pre>
         </div>
+    </div>
+    <div id="fortran">
+        <h2>FORTRAN(2003)</h2>
+        <p>I'm not particularily sure <i>why</i> I did this one, I guess I had to satisfy some peverse curiosity. Anyway, FORTRAN is old, ugly, and largely still the standard for supercomputer benchmarking. It's not the worst possible language ever, but if you have the choice <i>anything</i> is signifigantly better.</p>
+        <p>Let's check out a simple hello world:</p>
+<pre><code>
+program hello
+    implicit none
+    print*, "Hello, World"
+end program hello
+</code></pre>
     </div>
 </body>
 </html>
